# mcpgen

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: check-lib-docs.md  commit-feature.md  tdd.md  update-docs.md
.github/workflows/: test.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: config.py  main.py
backend/agents/: analyzer_agent.py  chat_agent.py  configurator_agent.py  debugger_agent.py  extractor_agent.py  generator_agent.py  models.py  tester_agent.py
backend/api/: artifacts.py  chat.py  configurator.py  generation.py  hosting.py  jobs.py  router.py  sandbox.py  specs.py
backend/codegen/: fastmcp_docs.py
backend/db/: client.py  models.py  repositories.py  store.py
backend/eval/: metrics.py  openrouter_judge.py
backend/pipeline/: orchestrator.py  packager.py  parser.py  validator.py
docs/: README.md  api.md  architecture.md  database.md  deployment.md  pipeline.md
frontend/: nginx.conf
frontend-next/: next.config.ts  package-lock.json  package.json
tests/: conftest.py  test_agent_models.py  test_analyzer_agent.py  test_analyzer_eval.py  test_api_jobs.py  test_api_specs.py  test_app.py  test_chat_agent.py  test_config.py  test_db_models.py  test_docker_service.py  test_extractor_agent.py  test_extractor_eval.py  test_full_eval.py  test_generator_agent.py  test_generator_eval.py  test_metrics.py  test_packager.py  test_parser.py  test_spec_fetcher.py  test_validator.py
(+36 files in other folders)
