[project]
name = "mcpgen"
version = "0.1.0"
description = "MCP server generator from API documentation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic-ai>=0.0.49",
    "httpx>=0.28",
    "supabase>=2.13",
    "fastmcp>=3.1",
    "prance>=23.6",
    "openapi-pydantic>=0.4",
    "docker>=7.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pdfplumber>=0.11",
    "trafilatura>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "deepeval>=2.0",
    "ruff>=0.8",
    "httpx",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
